# lab5_GrishinaK_23B18

./: .gitignore  CMakeLists.txt  README.md  calculator.cpp  client.cpp  database.cpp  parser.h  registration_test.cpp  server.cpp
src/: client.cpp  parser.h  server.cpp
test/: README.md  calculation_test.cpp  registration_test.cpp  simulation_test.cpp
